--- a/public/mypages.html
+++ b/public/mypages.html
@@ -93,7 +93,7 @@
                     table += `<tr>
                         <td>${row.name}</td>
                         <td><a href="editpage.html?${new URLSearchParams({ id: row.id })}">Edit</a></td>
-                        <td>WIP</td>    
+                        <td><a href="deletepage.html?${new URLSearchParams({ id: row.id })}">Delete</a></td>    
                     </tr>`;
                 }
             }
