Looks much better now + bug fixes

--- a/public/createpage.html
+++ b/public/createpage.html
@@ -25,7 +25,7 @@
         <h3><a href="login.html">Please log in here</a></h3>
     </div>
 
-    <div class="container logged-in" hidden>
+    <div class="container create logged-in" hidden>
         <header class="row title-banner">
             <h1>Create a New Page</h1>
             <h3><a href="index.html">Back to Home</a></h3>
