--- a/public/index.html
+++ b/public/index.html
@@ -23,22 +23,24 @@
 
 <body>
     <div class="container">
-        <header class="row title-banner">
-            <h1>A Simple CMS</h1>
-            <h3>Made by Joaquin Rodriguez</h3>
-        </header>
-
-        <main class="row">
-            <nav class="main-menu-select">
-                <ul>
-                    <a id="signin" href="login.html"><li>Sign In</li></a>
-                    <a id="create" href="login.html"><li>Create a Webpage</li></a>
-                    <a id="search" href="search.html"><li>Search our Webpages</li></a>
-                    <a id="upload" href="login.html"><li>Upload files for webpages</li></a>
-                    <a id="logout" href="logout.html" hidden><li>Logout</li></a>
-                </ul>
-            </nav>
-        </main>
+        <div class="main-section row">
+            <header class="row title-banner">
+                <h1>A Simple CMS</h1>
+                <h3>Made by Joaquin Rodriguez</h3>
+            </header>
+    
+            <main class="row">
+                <nav class="main-menu-select">
+                    <ul>
+                        <a id="signin" href="login.html"><li>Sign In</li></a>
+                        <a id="create" href="login.html"><li>Create a Webpage</li></a>
+                        <a id="search" href="search.html"><li>Search our Webpages</li></a>
+                        <a id="upload" href="login.html"><li>Upload files for webpages</li></a>
+                        <a id="logout" href="logout.html" hidden><li>Logout</li></a>
+                    </ul>
+                </nav>
+            </main>
+        </div>
 
         <footer class="row title-footer">
             <p>&copy; Joaquin Rodriguez, 2025</p>
