--- a/public/login.html
+++ b/public/login.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container create">
         <header class="row title-banner">
             <h1>Sign In</h1>
             <h3><a href="index.html">Back to Home</a></h3>
@@ -55,7 +55,7 @@
             </div>
 
             <div class="row">
-                <label>Create account instead</label>
+                <label>Create Account</label>
                 <button id="create">Create Account</button>
             </div>
         </main>
