--- a/public/editpage.html
+++ b/public/editpage.html
@@ -155,6 +155,7 @@
             document.getElementById('place-new-element').hidden = true;
             document.getElementById('delete-content-warning').hidden = true;
             document.getElementById('edit-content-text').hidden = true;
+            document.getElementById('edit-selected-content').hidden = true;
             // ... add other popups to close here
 
             // Found from https://stackoverflow.com/questions/9251837/how-to-remove-all-listeners-in-an-element
